Fix stable/stein requirements for neutron projects
Use Stein released libs for neutron related projects

Change-Id: Ieb5994db69d0962d49f3cf17559dd9b2db8773f0

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,14 +31,14 @@ mock>=2.0.0 # BSD
 
 # These repos are installed from git in OpenStack CI if the job
 # configures them as required-projects:
-neutron>=14.0.0.0rc1 # Apache-2.0
-networking-l2gw>=14.0.0 # Apache-2.0
-networking-sfc>=8.0.0.0rc1 # Apache-2.0
-neutron-lbaas>=14.0.0.0rc1 # Apache-2.0
-neutron-fwaas>=14.0.0.0rc1 # Apache-2.0
-neutron-vpnaas>=14.0.0.0rc1 # Apache-2.0
-neutron-dynamic-routing>=14.0.0.0rc1 # Apache-2.0
-vmware-nsxlib>=13.1.0 # Apache-2.0
+neutron>=14.0.0.0rc1,<15.0.0 # Apache-2.0
+networking-l2gw>=14.0.0,<15.0.0 # Apache-2.0
+networking-sfc>=8.0.0.0rc1,<15.0.0 # Apache-2.0
+neutron-lbaas>=14.0.0.0rc1,<15.0.0 # Apache-2.0
+neutron-fwaas>=14.0.0.0rc1,<15.0.0 # Apache-2.0
+neutron-vpnaas>=14.0.0.0rc1,<15.0.0 # Apache-2.0
+neutron-dynamic-routing>=14.0.0.0rc1,<15.0.0 # Apache-2.0
+vmware-nsxlib>=14.0.0 # Apache-2.0
 # NOTE: we require octavia but can't depend on it for Stein
 # octavia>=4.0.0.0rc1 # Apache-2.0
 
