Octavia driver: agent implementation
The driver is loaded, then terminated whenever a request is issued.
This behavior causes termination of the Octavia listener which is
responsible to the processing of the driver status updates and
statistics processing.
The following change implements an agent which will execute the
listener.

Change-Id: I566aaa65df4ba7455577a539aa9eebb6cc36a099
(cherry picked from commit 24e93461d0ef52d776e670b91735f9599d11154d)

--- a/setup.cfg
+++ b/setup.cfg
@@ -98,6 +98,8 @@ vmware_nsx.neutron.nsxv3.housekeeper.jobs =
     mismatch_logical_port = vmware_nsx.plugins.nsx_v3.housekeeper.mismatch_logical_port:MismatchLogicalportJob
 octavia.api.drivers =
     vmwareedge = vmware_nsx.services.lbaas.octavia.octavia_driver:NSXOctaviaDriver
+octavia.driver_agent.provider_agents =
+    vmwareagent = vmware_nsx.services.lbaas.octavia.octavia_driver:vmware_nsx_provider_agent
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
