Use the networking-l2gw project new location
networking-l2gw and networking-l2gw-tempest-plugin are
imported to new location now and supposed to be retired from
openstack/namespace[1].

-https://review.opendev.org/#/c/744110/

Change-Id: I902ea79cdd3a8e56540ab44a7bd2f986f5d18bca

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -11,7 +11,7 @@
         - openstack-tox-pep8:
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -24,7 +24,7 @@
             timeout: 5400
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -37,7 +37,7 @@
             timeout: 5400
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -50,7 +50,7 @@
             timeout: 5400
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -66,7 +66,7 @@
         - openstack-tox-pep8:
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -79,7 +79,7 @@
             timeout: 5400
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -92,7 +92,7 @@
             timeout: 5400
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -105,7 +105,7 @@
             timeout: 5400
             required-projects:
               - openstack/neutron
-              - openstack/networking-l2gw
+              - x/networking-l2gw
               - openstack/networking-sfc
               - openstack/neutron-lbaas
               - x/vmware-nsxlib
@@ -121,7 +121,7 @@
     timeout: 5400
     required-projects:
       - openstack/neutron
-      - openstack/networking-l2gw
+      - x/networking-l2gw
       - openstack/networking-sfc
       - openstack/neutron-lbaas
       - x/vmware-nsxlib
