--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ mock>=2.0.0 # BSD
 
 # These repos are installed from git in OpenStack CI if the job
 # configures them as required-projects:
-neutron>=14.0.0.0rc1,<15.0.0 # Apache-2.0
+neutron>=14.0.0.0rc1 # Apache-2.0
 networking-l2gw>=14.0.0,<15.0.0 # Apache-2.0
 networking-sfc>=8.0.0.0rc1,<15.0.0 # Apache-2.0
 neutron-lbaas>=14.0.0.0rc1,<15.0.0 # Apache-2.0
