--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands = false
 # https://pip.pypa.io/en/stable/reference/pip_install/#editable-installs
 # note that order is important to ensure dependencies don't override
 commands =
-    pip install -q -e "git+https://git.openstack.org/openstack/networking-l2gw@stable/stein#egg=networking_l2gw"
+    pip install -q -e "git+https://git.openstack.org/x/networking-l2gw@stable/stein#egg=networking_l2gw"
     pip install -q -e "git+https://git.openstack.org/openstack/networking-sfc@stable/stein#egg=networking_sfc"
     pip install -q -e "git+https://git.openstack.org/openstack/neutron-lbaas@stable/stein#egg=neutron_lbaas"
     pip install -q -e "git+https://git.openstack.org/openstack/neutron-fwaas@stable/stein#egg=neutron_fwaas"
